[project]
name = "agent-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.60.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "openai>=1.98.0",
    "streamlit>=1.47.1",
    "watchdog>=6.0.0",
]
